<resources>
    <string name="app_name">Photography</string>


    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_name">Username</string>
    <string name="retype_password">Retype password</string>
    <string name="phone_no">Phone no.</string>
    <string name="no_tagged_photos">No tagged photos</string>
    <string name="no_saved_photos">No saved photos</string>
    <string name="description">Description:</string>
    <string name="quote_message">Quote Message:</string>
    <string name="likes">Likes:</string>
    <string name="add_category">Category name</string>

    <string-array name="type_of_gender">
        <item>Select Category</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
