<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:onClick="backPress"
                    android:src="@drawable/back_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/dancing_script_bold"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_24" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/photo_inquiry_image_View"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="#eee" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorAccent" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/photo_inquiry_photo_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/likes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="2dp"
                            android:text="@string/likes"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_14" />

                        <TextView
                            android:id="@+id/photo_inquiry_likes_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/text_size_14"
                            android:textStyle="bold" />

                    </LinearLayout>


                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/quote_message"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/inquiry_mesasge_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="Inquiry message..."
                    android:lines="10"
                    android:textSize="@dimen/text_size_16" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_task_fab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/fab_send_icon"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="6dp"
        app:fabSize="auto"
        tools:targetApi="lollipop" />
</FrameLayout>